src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Agreement_Duration__c</fullName>
        <description>The number of months between the Agreement Start Date and End Date</description>
        <formula>((YEAR( Agreement_End_Date__c ) - YEAR( Agreement_Start_Date__c ))*12) + (MONTH(Agreement_End_Date__c) - MONTH(Agreement_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of months between the Agreement Start Date and End Date</inlineHelpText>
        <label>Agreement Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Administrator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Funding Administrator)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <description>Represents the source or program providing the funding to the Participant.</description>
        <inlineHelpText>Represents the source or program providing the funding to the Participant.</inlineHelpText>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maica_cc__Funding_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>Represents how the funding is managed (based on the Funding Source).</description>
        <inlineHelpText>Represents how the funding is managed (based on the Funding Source).</inlineHelpText>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funding_Source__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>maica_cc__Funding_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Represents the Funding for which this Service Agreement is being developed.</inlineHelpText>
        <label>Funding</label>
        <referenceTo>maica_cc__Funding__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Participant)</relationshipLabel>
        <relationshipName>Participant_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>Funding_Administrator_Required</fullName>
        <active>true</active>
        <description>Ensures that the Funding Administrator lookup is populated when the Funding Source meets specific criteria.</description>
        <errorConditionFormula>AND(
            ISBLANK(Funding_Administrator__c),
            OR(
            ISPICKVAL(Funding_Type__c, &quot;Plan Managed&quot;),
            ISPICKVAL(Funding_Type__c, &quot;Combination&quot;),
            ISPICKVAL(Funding_Type__c, &quot;Home Care Package&quot;),
            ISPICKVAL(Funding_Source__c, &quot;Partner Organisation&quot;),
            ISPICKVAL(Funding_Source__c, &quot;Block Funding&quot;)
            )
            )</errorConditionFormula>
        <errorMessage>Please provide the Funding Administrator.</errorMessage>
    </validationRules>
</CustomObject>